--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,14 @@
 
 html,
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  color: #29303b;
+  background-color: #fff;
+  line-height: 1.43;
+}
+
+.myNavBar .navbar-brand img {
+  width: 110px;
 }
 /*# sourceMappingURL=main.css.map */
