--- a/sass/Base/_reset.scss
+++ b/sass/Base/_reset.scss
@@ -5,5 +5,9 @@
 }
 html,
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: $fs-0;
+    color: $color-black-0;
+    background-color: $color-white-0;
+    line-height: $line-height-0;
 }
