--- a/sass/Layout/_header.scss
+++ b/sass/Layout/_header.scss
@@ -1,7 +1,87 @@
 .myNavBar {
-    .navbar-brand{
-       img{
-           width: 110px;
-       } 
+    border-bottom: 1px solid $color-gray-3;
+    .navbar-brand {
+        flex-grow: 1;
+        img {
+            width: 110px;
+        }
+    }
+    .categories {
+        flex-grow: 1;
+        @include text($color-black-light, $fs-1, $fw-normal);
+        align-self: center;
+    }
+    .input_search {
+        flex-grow: 5;
+        .form-control {
+            background-color: $color-gray-1;
+            border: none;
+            transition: none;
+            &:focus {
+                box-shadow: none;
+                background-color: $color-white-0;
+                border-top: 1px solid $color-gray-3;
+                border-bottom: 1px solid$color-gray-3;
+                border-left: 1px solid $color-gray-3;
+            }
+            &:focus + .input-group-prepend {
+                .input-group-text {
+                    color: $color-red-0;
+                    background-color: $color-white-0;
+                    border-top: 1px solid $color-gray-3;
+                    border-bottom: 1px solid$color-gray-3;
+                    border-right: 1px solid $color-gray-3;
+                }
+                &:hover {
+                    .input-group-text {
+                        color: $color-white-0;
+                        background-color: $color-red-0;
+                    }
+                }
+            }
+        }
+        .input-group-prepend {
+            .input-group-text {
+                background: $color-gray-1;
+                color: $color-red-0;
+                border: none;
+            }
+            &:hover {
+                .input-group-text {
+                    color: $color-white-0;
+                    background-color: $color-red-0;
+                }
+            }
+        }
+    }
+    .navbar-nav {
+        justify-content: space-between;
+        width: 100%;
+        .nav-item {
+            .nav-link {
+                @include text($color-black-light, $fs-1, $fw-normal);
+                padding: $pd-1 $pd-2;
+            }
+            &:hover {
+                background-color: $color-gray-1;
+            }
+        }
+        .nav-item:nth-child(3) {
+            border-radius: 50%;
+        }
+    }
+    @include responsive-to("extra-large") {
+        .navbar-nav {
+            .business,
+            .instructor {
+                display: none !important;
+            }
+        }
+    }
+    @include responsive-to("medium") {
+        .categories,
+        .input_search {
+            display: none !important;
+        }
     }
 }
